cursive-bootstrap/tests/ui/E-TYP/E-TYP-2404.cursive
// RUN: compile-fail
// DIAG: E-TYP-2404
// SPEC: 5.3
// DESC: Implementing field has incompatible type

class Sized {
    size: usize
}

record MySize <: Sized {  //~ ERROR E-TYP-2404
    size: i32
}



public procedure main(move ctx: Context) -> i32 {
    return 0
}

